# tokenitis

./: .gitignore  Cargo.toml  README.md  todo.txt
src/: entrypoint.rs  error.rs  errors.rs  execute.rs  get_inputs.rs  get_outputs.rs  initialize.rs  instruction.rs  lib.rs  processor.rs  state.rs
src/sdk/: mod.rs
src/tokenitis_instruction/: create_transform.rs  execute_transform.rs  mod.rs
src/tokenitis_instruction/create_transform/: execute.rs  mod.rs  validate.rs
src/tokenitis_instruction/execute_transform/: execute.rs  mod.rs  validate.rs
src/util/: mod.rs
tests/: basic.rs
