[package]
name = "tokenitis"
version = "0.1.0"
edition = "2018"

[dependencies]
solana-program = { git = "https://github.com/solana-labs/solana", branch="master" }
spl-token = { git = "https://github.com/shravanshetty1/solana-program-library", branch="master", features = ["no-entrypoint"] }
borsh = "0.9.3"

[dev-dependencies]
solana-client = { git = "https://github.com/solana-labs/solana", branch="master" }
solana-sdk = { git = "https://github.com/solana-labs/solana", branch="master" }
tokio = "1.17.0"


[lib]
crate-type = ["cdylib", "lib"]
