[package]
name = "tokenitis"
version = "0.1.0"
edition = "2018"

[dependencies]
solana-program = "1.10.3"
spl-token = { git = "https://github.com/shravanshetty1/solana-program-library", branch="ata-1.0.3", features = ["no-entrypoint"] }
borsh = "0.9.3"

[dev-dependencies]
solana-client = "1.10.3"
solana-sdk = "1.10.3"
tokio = "1.17.0"


[lib]
crate-type = ["cdylib", "lib"]
